[gd_scene load_steps=9 format=3 uid="uid://b2yrhybmb2vyr"]

[ext_resource type="Script" path="res://Myassets/Scenes/Online/jcj_online.gd" id="1_k8sjd"]
[ext_resource type="Texture2D" uid="uid://b7ohyih5763gy" path="res://Myassets/Img/Fondo.png" id="2_gh2jo"]
[ext_resource type="Texture2D" uid="uid://drdfsa15trexc" path="res://Resources/img/fondoTablero.png" id="3_ix3v3"]
[ext_resource type="Texture2D" uid="uid://cy38h6chs8gl7" path="res://Resources/img/backnormal.png" id="4_img8r"]
[ext_resource type="Texture2D" uid="uid://bwwaxiw2emgiq" path="res://Resources/img/backpressPNG.PNG" id="5_4d6qf"]
[ext_resource type="Texture2D" uid="uid://ct5rt2osqg3ix" path="res://Resources/img/backhover.PNG" id="6_7851c"]
[ext_resource type="Texture2D" uid="uid://bseao24xax032" path="res://Resources/img/bttstandarlhover.PNG" id="7_4ifg1"]
[ext_resource type="FontFile" uid="uid://bqqowu4g2h81s" path="res://Resources/img/Minecraft.ttf" id="8_ocli4"]

[node name="JcjOnline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -79.0
offset_top = 14.0
offset_right = -431.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k8sjd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 234.0
offset_right = 818.0
offset_bottom = 458.0

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MainContainer"]
layout_mode = 2
text = "PARTIDAS DISPONIBLES
"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbyList" type="VBoxContainer" parent="MarginContainer/MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2

[node name="ButtonCreate" type="Button" parent="MarginContainer/MainContainer/HBoxContainer"]
layout_mode = 2
text = "Crear partida"

[node name="ButtonBack" type="Button" parent="MarginContainer/MainContainer/HBoxContainer"]
layout_mode = 2
text = "Volver"

[node name="StatusLabel" type="Label" parent="MarginContainer/MainContainer"]
layout_mode = 2
text = "conectando al servidor"

[node name="fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -26.0
offset_top = -56.0
offset_right = 1530.0
offset_bottom = 856.0
scale = Vector2(0.880247, 0.826699)
texture = ExtResource("2_gh2jo")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 246.0
offset_top = 143.0
offset_right = 960.0
offset_bottom = 555.0
texture = ExtResource("3_ix3v3")

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
offset_left = 84.0
offset_top = 50.0
offset_right = 625.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 0

[node name="TutorialList" type="VBoxContainer" parent="TextureRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="goBack" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 286.0
offset_top = 287.0
offset_right = 433.0
offset_bottom = 346.0
texture_normal = ExtResource("4_img8r")
texture_pressed = ExtResource("5_4d6qf")
texture_hover = ExtResource("6_7851c")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 426.0
offset_top = 267.0
offset_right = 883.0
offset_bottom = 391.0
scale = Vector2(0.853276, 0.800895)
texture = ExtResource("7_4ifg1")

[node name="Label" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = -21.0
offset_right = 138.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_ocli4")
theme_override_font_sizes/font_size = 40
text = "NOT IMPLEMENTED"

[connection signal="pressed" from="MarginContainer/MainContainer/HBoxContainer/ButtonCreate" to="." method="_on_ButtonCreate_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="TextureRect/goBack" to="." method="_on_go_back_pressed"]
